fix input select on mobile devices

--- a/index.css
+++ b/index.css
@@ -253,7 +253,7 @@ body {
 
     .psw-checkboxes {
         align-self: start;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
     .line {
